# flightsim

./: .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: engine.cpp  engine.h  fs_math.cpp  fs_math.h  game_loop.cpp  game_loop.h  main.cpp  plane.cpp  plane.h  simulation.cpp  simulation.h
test/: CMakeLists.txt  test_engine.cpp  test_fs_math.cpp  test_plane.cpp  test_simulation.cpp
